@@ -1,25 +1,36 @@
 package com.yuzhi.dts.admin.web.rest;
 
+import com.yuzhi.dts.admin.service.audit.AdminAuditOperation;
 import com.yuzhi.dts.admin.service.audit.AdminAuditService;
-import com.yuzhi.dts.admin.service.audit.AdminAuditService.PendingAuditEvent;
+import com.yuzhi.dts.admin.service.audit.AdminAuditService.AuditRecordBuilder;
+import com.yuzhi.dts.admin.service.audit.AdminAuditService.AuditResult;
+import com.yuzhi.dts.admin.service.audit.AdminAuditService.AuditTarget;
+import com.yuzhi.dts.admin.service.audit.AuditOperationType;
 import com.yuzhi.dts.common.net.IpAddressUtils;
 import jakarta.servlet.http.HttpServletRequest;
+import java.lang.reflect.Array;
 import java.time.Instant;
+import java.time.format.DateTimeParseException;
+import java.util.ArrayList;
+import java.util.Collection;
+import java.util.LinkedHashMap;
+import java.util.List;
 import java.util.Locale;
 import java.util.Map;
+import java.util.Objects;
+import java.util.stream.Collectors;
+import org.apache.commons.lang3.StringUtils;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
-import org.springframework.util.StringUtils;
 import org.springframework.web.bind.annotation.PostMapping;
 import org.springframework.web.bind.annotation.RequestBody;
 import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RestController;
 
 /**
- * Receives forwarded audit events from platform and persists them into admin store
- * so that all logs can be viewed centrally on the admin side.
+ * 平台侧推送审计事件的接收端。接收到的数据会转换为统一的管理端审计事件格式。
  */
 @RestController
 @RequestMapping("/api/audit-events")
@@ -30,63 +41,66 @@ public class AuditIngestResource {
     private final AdminAuditService auditService;
 
     public AuditIngestResource(AdminAuditService auditService) {
-        this.auditService = auditService;
+        this.auditService = Objects.requireNonNull(auditService, "auditService required");
     }
 
     @PostMapping
     public ResponseEntity<Void> ingest(@RequestBody Map<String, Object> body, HttpServletRequest request) {
         try {
-            PendingAuditEvent event = new PendingAuditEvent();
-            String source = asText(body.get("sourceSystem"));
-            event.sourceSystem = StringUtils.hasText(source) ? source : "platform";
-            Object occurredAt = body.get("occurredAt");
-            if (occurredAt instanceof String s && !s.isBlank()) {
-                try { event.occurredAt = Instant.parse(s.trim()); } catch (Exception ignore) { event.occurredAt = Instant.now(); }
+            Map<String, Object> detail = new LinkedHashMap<>(body);
+            String sourceSystem = asText(body.get("sourceSystem"));
+            String actor = resolveActor(body);
+            String actorRole = resolveActorRole(body);
+            String actionCode = defaultString(asText(body.get("operationCode")), asText(body.get("action")));
+            if (StringUtils.isBlank(actionCode)) {
+                actionCode = "PLATFORM_EVENT";
+            }
+            String summary = asText(body.get("summary"));
+            String module = asText(body.get("module"));
+            String actorName = asText(body.get("actorName"));
+            Instant occurredAt = parseInstant(asText(body.get("occurredAt")));
+            String resourceId = defaultString(asText(body.get("resourceId")), asText(body.get("targetRef")));
+            List<String> targetIds = extractTargetIds(body, resourceId);
+            String targetTable = asText(body.get("targetTable"));
+            String clientIp = resolveClientIp(body, request);
+            String clientAgent = resolveClientAgent(body, request);
+
+            AuditRecordBuilder builder = auditService
+                .builder()
+                .actor(actor)
+                .actorName(StringUtils.isNotBlank(actorName) ? actorName : null)
+                .actorRole(actorRole)
+                .sourceSystem(StringUtils.isNotBlank(sourceSystem) ? sourceSystem : "platform")
+                .occurredAt(occurredAt)
+                .clientIp(clientIp)
+                .clientAgent(clientAgent)
+                .details(detail);
+
+            AdminAuditOperation.fromCode(actionCode).ifPresent(builder::fromOperation);
+            if (StringUtils.isNotBlank(module)) {
+                builder.module(module);
+            }
+
+            AuditOperationType opType = resolveOperationType(body, actionCode);
+            builder.operationType(opType);
+            builder.operationTypeText(opType.getDisplayName());
+
+            if (!targetIds.isEmpty() || StringUtils.isNotBlank(targetTable)) {
+                builder.target(new AuditTarget(targetTable, targetIds, Map.of(), Map.of()));
+            }
+
+            String resultRaw = asText(body.get("result"));
+            builder.result(parseResult(resultRaw));
+
+            if (StringUtils.isNotBlank(summary)) {
+                builder.summary(summary);
+            } else if (!targetIds.isEmpty()) {
+                builder.summary(actionCode + "：" + String.join(",", targetIds));
             } else {
-                event.occurredAt = Instant.now();
+                builder.summary(actionCode);
             }
-            event.actor = resolveActor(body);
-            event.actorRole = resolveActorRole(body);
-            event.action = defaultString(asText(body.get("action")), "UNKNOWN");
-            event.module = defaultString(asText(body.get("module")), "GENERAL");
-            String resourceType = asText(body.get("resourceType"));
-            if (!StringUtils.hasText(resourceType)) {
-                resourceType = asText(body.get("targetKind"));
-            }
-            event.resourceType = resourceType;
-            String resourceId = asText(body.get("resourceId"));
-            if (!StringUtils.hasText(resourceId)) {
-                resourceId = asText(body.get("targetRef"));
-            }
-            event.resourceId = resourceId;
-            String result = asText(body.get("result"));
-            event.result = StringUtils.hasText(result) ? result : "SUCCESS";
-            String httpMethod = asText(body.get("httpMethod"));
-            if (StringUtils.hasText(httpMethod)) {
-                event.httpMethod = httpMethod.trim().toUpperCase(Locale.ROOT);
-            }
-            String requestUriBody = asText(body.get("requestUri"));
-            if (StringUtils.hasText(requestUriBody)) {
-                event.requestUri = requestUriBody.trim();
-            }
-            Object latency = body.get("latencyMs");
-            Integer latencyMs = parseLatency(latency);
-            if (latencyMs != null) {
-                event.latencyMs = latencyMs;
-            }
-            // Client IP: prefer body-provided clientIp (origin browser IP) then forwarded headers
-            String bodyIp = asText(body.get("clientIp"));
-            String forwarded = request.getHeader("X-Forwarded-For");
-            String xfip = StringUtils.hasText(forwarded) ? forwarded.split(",")[0].trim() : null;
-            String realIp = request.getHeader("X-Real-IP");
-            String remote = request.getRemoteAddr();
-            event.clientIp = IpAddressUtils.resolveClientIp(bodyIp, xfip, realIp, remote);
-            String agent = asText(body.get("clientAgent"));
-            event.clientAgent = StringUtils.hasText(agent) ? agent : request.getHeader("User-Agent");
-            event.extraTags = asText(body.get("extraTags"));
-            Object payload = body.get("payload");
-            event.payload = payload != null ? payload : body;
-            auditService.record(event);
+
+            auditService.record(builder.build());
             return ResponseEntity.accepted().build();
         } catch (Exception ex) {
             log.warn("Failed to ingest audit event from platform: {}", ex.toString());
@@ -94,12 +108,163 @@ public class AuditIngestResource {
         }
     }
 
-    private static String asText(Object v) {
-        return v == null ? null : String.valueOf(v);
+    private AuditOperationType resolveOperationType(Map<String, Object> body, String actionCode) {
+        String explicit = firstNonBlank(
+            asText(body.get("operationType")),
+            asText(body.get("operation_type")),
+            asText(body.get("operationTypeCode"))
+        );
+        if (StringUtils.isNotBlank(explicit)) {
+            return mapOperationType(explicit);
+        }
+        if (StringUtils.isNotBlank(actionCode)) {
+            return mapOperationType(actionCode);
+        }
+        return AuditOperationType.READ;
+    }
+
+    private AuditOperationType mapOperationType(String token) {
+        if (StringUtils.isBlank(token)) {
+            return AuditOperationType.READ;
+        }
+        String normalized = token.trim().toUpperCase(Locale.ROOT);
+        if (normalized.isEmpty()) {
+            return AuditOperationType.READ;
+        }
+        String lower = token.trim().toLowerCase(Locale.ROOT);
+        if (
+            matches(normalized, "CREATE", "ADD", "NEW", "INSERT", "REGISTER", "SUBMIT") ||
+            containsAny(lower, "新增", "新建", "创建", "提交", "申请", "导入", "上传")
+        ) {
+            return AuditOperationType.CREATE;
+        }
+        if (matches(normalized, "DELETE", "REMOVE", "DESTROY", "DROP") || containsAny(lower, "删除", "移除", "下线", "注销")) {
+            return AuditOperationType.DELETE;
+        }
+        if (
+            matches(normalized, "READ", "GET", "LIST", "QUERY", "SEARCH", "FETCH", "VIEW", "PREVIEW", "DOWNLOAD", "EXPORT", "EXECUTE", "RUN", "TEST", "SYNC") ||
+            containsAny(lower, "查看", "查询", "预览", "下载", "导出", "浏览", "列表", "检索")
+        ) {
+            return AuditOperationType.READ;
+        }
+        if (
+            matches(normalized, "UPDATE", "MODIFY", "EDIT", "SAVE", "ENABLE", "DISABLE", "PUBLISH", "UNPUBLISH", "APPROVE", "REJECT", "GRANT", "REVOKE") ||
+            containsAny(lower, "修改", "更新", "调整", "批准", "审批", "拒绝", "执行", "运行", "启用", "禁用", "发布", "保存", "编辑")
+        ) {
+            return AuditOperationType.UPDATE;
+        }
+        return AuditOperationType.UPDATE;
+    }
+
+    private boolean matches(String actual, String... candidates) {
+        for (String candidate : candidates) {
+            if (actual.equals(candidate)) {
+                return true;
+            }
+        }
+        return false;
+    }
+
+    private boolean containsAny(String source, String... phrases) {
+        if (StringUtils.isBlank(source) || phrases == null) {
+            return false;
+        }
+        for (String phrase : phrases) {
+            if (phrase != null && source.contains(phrase)) {
+                return true;
+            }
+        }
+        return false;
+    }
+
+    private static String asText(Object value) {
+        return value == null ? null : String.valueOf(value);
     }
 
     private static String defaultString(String value, String fallback) {
-        return StringUtils.hasText(value) ? value : fallback;
+        return StringUtils.isNotBlank(value) ? value : fallback;
+    }
+
+    private Instant parseInstant(String value) {
+        if (StringUtils.isBlank(value)) {
+            return null;
+        }
+        try {
+            return Instant.parse(value.trim());
+        } catch (DateTimeParseException ex) {
+            return null;
+        }
+    }
+
+    private AuditResult parseResult(String value) {
+        if (StringUtils.isBlank(value)) {
+            return AuditResult.SUCCESS;
+        }
+        String normalized = value.trim().toLowerCase(Locale.ROOT);
+        return switch (normalized) {
+            case "success", "ok", "succeeded", "通过" -> AuditResult.SUCCESS;
+            case "pending", "processing", "处理中" -> AuditResult.PENDING;
+            case "fail", "failed", "error", "异常", "拒绝" -> AuditResult.FAILED;
+            default -> AuditResult.SUCCESS;
+        };
+    }
+
+    private List<String> extractTargetIds(Map<String, Object> body, String fallbackId) {
+        List<String> ids = new ArrayList<>();
+        mergeIds(ids, body.get("targetIds"));
+        mergeIds(ids, body.get("targetId"));
+        mergeIds(ids, body.get("resourceIds"));
+        mergeIds(ids, body.get("resourceId"));
+        mergeIds(ids, body.get("targetRef"));
+
+        if (ids.isEmpty() && isMeaningfulId(fallbackId)) {
+            ids.add(fallbackId.trim());
+        }
+        if (ids.isEmpty()) {
+            mergeIds(ids, body.get("username"));
+        }
+        return ids.stream().map(String::trim).filter(StringUtils::isNotBlank).distinct().collect(Collectors.toList());
+    }
+
+    private void mergeIds(Collection<String> ids, Object candidate) {
+        if (candidate == null) {
+            return;
+        }
+        if (candidate instanceof Collection<?> collection) {
+            for (Object item : collection) {
+                mergeIds(ids, item);
+            }
+            return;
+        }
+        if (candidate.getClass().isArray()) {
+            int length = Array.getLength(candidate);
+            for (int i = 0; i < length; i++) {
+                mergeIds(ids, Array.get(candidate, i));
+            }
+            return;
+        }
+        String text = candidate.toString();
+        if (StringUtils.isBlank(text)) {
+            return;
+        }
+        if (text.contains(",")) {
+            for (String part : text.split(",")) {
+                mergeIds(ids, part);
+            }
+            return;
+        }
+        if (isMeaningfulId(text)) {
+            ids.add(text.trim());
+        }
+    }
+
+    private boolean isMeaningfulId(String value) {
+        if (StringUtils.isBlank(value)) {
+            return false;
+        }
+        String trimmed = value.trim();
+        String lower = trimmed.toLowerCase(Locale.ROOT);
+        return !List.of("list", "search", "sync", "pending", "-", "demo").contains(lower);
     }
 
     private String resolveActor(Map<String, Object> body) {
@@ -112,11 +277,9 @@ public class AuditIngestResource {
             asText(body.get("operatorId")),
             asText(body.get("operatorCode")),
             asText(body.get("subject")),
-            asText(body.get("account")),
-            asText(body.get("resourceId")),
-            asText(body.get("targetRef"))
+            asText(body.get("account"))
         );
-        if (StringUtils.hasText(direct) && !isAnonymous(direct)) {
+        if (StringUtils.isNotBlank(direct) && !isAnonymous(direct)) {
             return direct.trim();
         }
         Object payload = body.get("payload");
@@ -130,16 +293,17 @@ public class AuditIngestResource {
                 asText(map.get("resourceId")),
                 asText(map.get("targetRef"))
             );
-            if (StringUtils.hasText(fromPayload) && !isAnonymous(fromPayload)) {
+            if (StringUtils.isNotBlank(fromPayload) && !isAnonymous(fromPayload)) {
                 return fromPayload.trim();
             }
         }
         String fallback = firstNonBlank(
             asText(body.get("userId")),
             asText(body.get("resourceId")),
-            asText(body.get("targetRef"))
+            asText(body.get("targetRef")),
+            asText(body.get("operatorId"))
         );
-        if (StringUtils.hasText(fallback) && !isAnonymous(fallback)) {
+        if (StringUtils.isNotBlank(fallback) && !isAnonymous(fallback)) {
             return fallback.trim();
         }
         return "unknown";
@@ -151,7 +315,7 @@ public class AuditIngestResource {
             asText(body.get("operatorRole")),
             asText(body.get("role"))
         );
-        if (StringUtils.hasText(role)) {
+        if (StringUtils.isNotBlank(role)) {
             return role.trim();
         }
         Object payload = body.get("payload");
@@ -161,7 +325,7 @@ public class AuditIngestResource {
                 asText(map.get("operatorRole")),
                 asText(map.get("role"))
             );
-            if (StringUtils.hasText(fromPayload)) {
+            if (StringUtils.isNotBlank(fromPayload)) {
                 return fromPayload.trim();
             }
         }
@@ -173,7 +337,7 @@ public class AuditIngestResource {
             return null;
         }
         for (String value : values) {
-            if (StringUtils.hasText(value) && !isAnonymous(value)) {
+            if (StringUtils.isNotBlank(value) && !isAnonymous(value)) {
                 return value;
             }
         }
@@ -181,7 +345,7 @@ public class AuditIngestResource {
     }
 
     private boolean isAnonymous(String value) {
-        if (!StringUtils.hasText(value)) {
+        if (StringUtils.isBlank(value)) {
             return true;
         }
         String norm = value.trim().toLowerCase(Locale.ROOT);
@@ -192,20 +356,20 @@ public class AuditIngestResource {
             || "-".equals(norm);
     }
 
-    private Integer parseLatency(Object latency) {
-        if (latency == null) {
-            return null;
+    private String resolveClientIp(Map<String, Object> body, HttpServletRequest request) {
+        String fromBody = asText(body.get("clientIp"));
+        String forwarded = request.getHeader("X-Forwarded-For");
+        String realIp = request.getHeader("X-Real-IP");
+        String remote = request.getRemoteAddr();
+        return IpAddressUtils.resolveClientIp(fromBody, forwarded, realIp, remote);
+    }
+
+    private String resolveClientAgent(Map<String, Object> body, HttpServletRequest request) {
+        String agent = asText(body.get("clientAgent"));
+        if (StringUtils.isNotBlank(agent)) {
+            return agent.trim();
         }
-        if (latency instanceof Number number) {
-            return number.intValue();
-        }
-        if (latency instanceof String text && StringUtils.hasText(text)) {
-            try {
-                return Integer.parseInt(text.trim());
-            } catch (NumberFormatException ignore) {
-                return null;
-            }
-        }
-        return null;
+        String header = request.getHeader("User-Agent");
+        return StringUtils.isNotBlank(header) ? header.trim() : null;
     }
 }
